# master_project

./: .env  .gitignore  .gitmodules  CMakeLists.txt  README.md  pylintrc  requirements.txt  research.sublime-project  test_integration.sh  test_runner.cxx
descriptors/: CMakeLists.txt  histogram.cpp  histogram.h  i_descriptor.h
descriptors/include/descriptors/: shape_distribution.h
descriptors/src/: distance.cxx  histogram.cpp  histogram.h  py_descriptors.cpp  shape_distribution.cpp  shape_distribution.cxx  shape_distribution.h
descriptors/test/: histogram_test.cpp  shape_distribution_test.cpp
django_server/: dataset.json  evaluation_dataset.json.sample  scrapper.py
django_server/common/templates/: base_html.hamlpy  bootstrap_form.html
django_server/common/templatetags/: custom_tags.py
django_server/django_server/: settings.py  urls.py  wsgi.py
django_server/identifier/: forms.py  models.py  tests.py  urls.py  views.py
django_server/partial_view/: models.py  tests.py  urls.py  views.py
django_server/pointcloud/: forms.py  models.py  tests.py  urls.py  views.py
django_server/pointcloud/fixtures/: cloud.pcd
django_server/pointcloud/templates/: upload_pcd_form.hamlpy
django_server/scrapper/: 3dwarehouse  test.py
django_server/scrapper/scrapper/: items.py  pipelines.py  settings.py
django_server/scrapper/scrapper/spiders/: model_spider.py
django_server/shape_distribution/: models.py  test_shell.py  tests.py  views.py
django_server/sketchup_models/: admin.py  models.py  tests.py  urls.py  views.py
django_server/sketchup_models/fixtures/: mesh_can.tri  mesh_cube.tri
django_server/sketchup_models/templates/: default.hamlpy  model_detailed_view.hamlpy  model_preview.hamlpy  model_short_view.hamlpy
django_server/system_evaluation/: forms.py  models.py  tests.py  urls.py  views.py
django_server/system_evaluation/fixtures/: example_dataset.json
django_server/system_evaluation/management/commands/: full_evaluation.py  preload_examples.py  preload_models.py
django_server/system_evaluation/models/: __init__.py  evaluation_session.py  example.py  example_manager.py  identification_attempt.py
django_server/system_evaluation/templates/: end_of_session.hamlpy  identification_failed.hamlpy  identification_succeed.hamlpy  new_session.hamlpy  thank_you.hamlpy
django_server/testapp/: admin.py  models.py  urls.py  views.py
django_server/testapp/templates/: base_html.hamlpy  default.hamlpy  model_short_view.hamlpy
django_server/warehouse_scrapper/: models.py  tests.py
django_server/warehouse_scrapper/templates/: _search_bar.hamlpy
include/: debug_helper.hpp
libmesh/: CMakeLists.txt
libmesh/src/: mesh.cpp  mesh.h  mesh.hpp  point_3d.cpp  point_3d.h  triangle_polygon.cpp  triangle_polygon.h  triangle_polygon.h.autosave  triangle_polygon.hpp  vector_3d.cpp  vector_3d.h  vector_3d.hpp
libmesh/test/: CMakeLists.txt  triangle_polygon_test.cpp
mesh/: CMakeLists.txt  Makefile  cmake_install.cmake
mesh/include/mesh/: mesh.hpp  point_3d.hpp  triangle_polygon.hpp  vector_3d.hpp
mesh/src/: mesh.cpp  point_3d.cpp  triangle_polygon.cpp  vector_3d.cpp
mesh/test/: point_3d_tests.cpp  triangle_polygon_test.cpp  vector_3d_test.cpp
module/: CMakeLists.txt  FindCppUnit.cmake  FindGLFW.cmake
partial_pointcloud/: CMakeLists.txt  cube.tri  partial_view.cpp  partial_view.cxx  partial_view.h  pointcloud_serialization.hpp  py_partial_view.cpp  shader_helper.hpp  test.cpp
partial_pointcloud/common/: shader.cpp  shader.hpp
partial_pointcloud/include/partial_pointcloud/: partial_view.h  partial_view_entropy.h  shader_helper.hpp
partial_pointcloud/shaders/: ColorFragmentShader.fragmentshader  ColorFragmentShader_entropy.fragmentshader  SimpleFragmentShader.fragmentshader  TransformVertexShader.vertexshader  TransformVertexShader_entropy.vertexshader  depth.fragmentshader  depth.vertexshader
partial_pointcloud/src/: partial_view.cpp  partial_view.cxx  partial_view_entropy.cpp  py_partial_view.cpp  shader_helper.cpp
partial_pointcloud/test/: cube.tri  partial_pointcloud_test.cpp
shaders/: ColorFragmentShader.fragmentshader  TransformVertexShader.vertexshader
tools/: CMakeLists.txt  heatmap.R  pcd_viewer.cxx  plot_raw_dist.R  warehouse_scrapper.rb
