INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/include)

FIND_PACKAGE(Boost 1.53.0 COMPONENTS system REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})


FILE(GLOB SUBPROJECT_SRCS src/*.cpp)
ADD_LIBRARY(mesh SHARED ${SUBPROJECT_SRCS})
TARGET_INCLUDE_DIRECTORIES(mesh PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
TARGET_LINK_LIBRARIES(mesh ${Boost_LIBRARIES})

# the library should compile only if needed
SET_TARGET_PROPERTIES(mesh PROPERTIES EXCLUDE_FROM_ALL true)
