INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/include)

FIND_PACKAGE( OpenGL REQUIRED)
FIND_PACKAGE( GLEW REQUIRED)
FIND_PACKAGE( GLM REQUIRED)
FIND_PACKAGE( X11 REQUIRED)
FIND_PACKAGE( GLFW REQUIRED)
MESSAGE( X11_LIBRARIES ${X11_LIBRARIES})

INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR})
SET(GL_LIBS ${GLEW_LIBRARY} ${OPENGL_LIBRARY} ${GLFW_LIBRARY} ${GLM_LIBRARIES} ${X11_LIBRARIES} 
     -lrt
     -lXinerama
     -lXrandr
     -lXxf86vm
     -lXi )

FIND_PACKAGE(Boost 1.53.0 COMPONENTS program_options serialization python system REQUIRED )
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

FIND_PACKAGE(PCL 1.2 REQUIRED)
INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
LINK_DIRECTORIES(${PCL_LIBRARY_DIRS})
ADD_DEFINITIONS(${PCL_DEFINITIONS})

ADD_EXECUTABLE(partial_view src/partial_view.cxx src/partial_view.cpp src/shader_helper.cpp)
TARGET_LINK_LIBRARIES(partial_view descriptors ${GL_LIBS} ${PCL_LIBRARIES})

ADD_LIBRARY(partialview SHARED src/partial_view.cpp src/partial_view.cpp src/shader_helper.cpp)
TARGET_LINK_LIBRARIES(partialview descriptors ${GL_LIBS} ${PCL_LIBRARIES} ${Boost_LIBRARIES})
SET_TARGET_PROPERTIES(partialview PROPERTIES EXCLUDE_FROM_ALL true)

# Expose PartialView to be used with python
FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
ADD_LIBRARY(pypartialview SHARED src/py_partial_view.cpp)
TARGET_LINK_LIBRARIES(pypartialview partialview ${Boost_LIBRARIES})
SET_TARGET_PROPERTIES(pypartialview PROPERTIES EXCLUDE_FROM_ALL true)

